Get some basic styling on the weather forecast done

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
 		place-items: center;
 		min-width: 320px;
 		min-height: 100vh;
+
+		background-attachment: fixed;
+		background-image: url("/milkyway.jpg");
+		background-size: cover;
 	}
 
 	a {
